	- Vessels with an orbital AI that are spawned at safe orbital altitudes are spawned into circular orbits. Vessels are spawned pointing away from each other.
	- Increase maximum spawn distance to 200km.
- ModIntegration:
	- Fixes for inhibiting CameraTools when initial spawning during continuous spawning and disable auto-switching to newly spawned craft joining the competition.

v1.6.8.0
IMPROVEMENTS / FIXES
- General:
	- Add tracking of 'named modules' (from non-dependency DLLs) to the VesselModuleRegistry.
	- Optimise "Vector3.Distance(from, to) < dist" type checks.
- UI:
	- rcsOverride enabled ECMJammers now properly affect RCS in the SPH/VAB RCS GUI.
	- Fix Equivalent Armor Thickness readout in the Armor GUI.
	- Fix custom ammobelt UI overwriting belts on heterogeneous weapon groups.
- AI / WM:
	- AI GUI fixes for surface AI.
	- Fix AI disengagement from launched nuclear/EMP ordinance if within projected blast radius.
	- Expose the weave strength factor as a tunable parameter for the surface and VTOL AI.
	- AI will now toggle/disable ECM Jammers if under fire from GPS/antiradiation ordinance.
	- Adjust the off-boresight angles for DLZ checks for extending to prevent super long-range extends.
	- Fix FSM not being started when initially deploying landing gear.
- Weapons:
	- Fix BurstFirelength and FireAngleOverride toggles not working in flight.
	- Fix APS parts getting mixed in with global weapon shortnaming and overriding barrage settings.
	- Anti-Ballistic APS no longer assigns multiple turrets to a single incoming shell, now respects reloading/overheated state of the weapon during target assignment.
	- Guns now properly respect crossfeed.
	- Don't apply the unity integrator correction to the unsupported gravity component of the aiming (improves on-orbit aiming).
	- Improve the estimate of the required OverlapSphere for Vessel-Relative Bullet Checks for hypervelocity craft.